resolve pull request bug; resolve relative path with "path" package; add font-face test case;

--- a/test/expected/simple_concat/all.css
+++ b/test/expected/simple_concat/all.css
@@ -50,6 +50,16 @@ h3 {
 }
 
 
+
 .test {
     background-image: url('data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7');
+}
+
+
+
+@font-face
+{
+    font-family: myFirstFont;
+    src: url('module/module_a/Sansation_Light.ttf'),
+    url('module/module_a/Sansation_Light.eot'); /* IE9+ */
 }
