--- a/test/fixtures/style/all.css
+++ b/test/fixtures/style/all.css
@@ -13,3 +13,4 @@ h3 {
 @import "lib/fancybox/fancybox.css";
 @import "module/module_a/module_a.css";
 @import "module/module_a/with_base64_data.css";
+@import "module/module_a/font_face.css";
